# wheelchair_ws

./: .gitignore  .gitmodules
rules.d/: 70-snap.arduino.rules  70-snap.obs-studio.rules  90-eego.rules  90-usb-motor.rules  99-hokuyo-rangefinder.rules  99-usb-serial-arduino-encoders.rules  99-usb-serial-arduino-imu.rules  99-usb-serial-arduino-rnet.rules  99-usb-serial-hokuyo.rules
src/cameras/camera/: package.xml
src/cameras/camera/cfg/: tags.yaml
src/cameras/camera/launch/: apriltag.launch  apriltag_ros.launch  camera.launch  detection.launch
src/ema_pc/: CMakeLists.txt  package.xml
src/ema_pc/include/ema_pc/: ema_pc.h
src/ema_pc/src/: ema_pc.cpp
src/hmm/hmm_feedback/: CMakeLists.txt  package.xml
src/hmm/hmm_feedback/include/hmm_feedback/: EngineHmmbars.h  bars.h
src/hmm/hmm_feedback/src/: bars.cpp
src/hmm/hmm_feedback/src/draw/: bars.cpp
src/hmm/hmm_feedback/src/engine/: engineHmmBars.cpp
src/hmm/hmm_launcher/: CMakeLists.txt  package.xml
src/hmm/hmm_launcher/extra/: eego_hmm16.mat  gaussFromMATtoYAML.m  lap_eego_hmm16.mat
src/hmm/hmm_launcher/launch/: hmm_calibration.launch  hmm_evaluation.launch  hmm_experiment.launch  hmm_test.launch
src/hmm/hmm_wheelchair_controller/: CMakeLists.txt  package.xml
src/hmm/hmm_wheelchair_controller/include/hmm_wheelchair_controller/: controller.h
src/hmm/hmm_wheelchair_controller/src/: Controller.cpp  controller.cpp
src/rosneuro/rosneuro_integrator/: .gitignore
src/rosneuro/rosneuro_integrator/src/: Integrator.cpp
src/rosneuro/rosneuro_launchers/: CMakeLists.txt  package.xml
src/rosneuro/rosneuro_launchers/launch/: calibration.launch  evaluation.launch  pipeline.launch
src/rosneuro/rosneuro_processing/src/: SmrBci.cpp
src/wheelchair_iaslab_main/wheelchair_iaslab/: CMakeLists.txt  package.xml
